--- a/CourtLink/package.json
+++ b/CourtLink/package.json
@@ -29,7 +29,9 @@
     "@angular-devkit/build-angular": "^19.1.3",
     "@angular/cli": "^19.1.3",
     "@angular/compiler-cli": "^19.1.0",
+    "@cypress/angular": "^3.0.0",
     "@types/jasmine": "~5.1.0",
+    "cypress": "^14.1.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
