--- a/CourtLink/package.json
+++ b/CourtLink/package.json
@@ -32,11 +32,11 @@
     "@cypress/angular": "^3.0.0",
     "@types/jasmine": "~5.1.0",
     "cypress": "^14.1.0",
-    "jasmine-core": "~5.5.0",
+    "jasmine-core": "^5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
+    "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2"
