--- a/CourtLink/package.json
+++ b/CourtLink/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@auth0/auth0-angular": "^2.2.3",
+    "ngx-swiper-wrapper": "^10.0.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
